tests, test run script, accept raw config as input in make_agents

--- a/package/configs/test1_difficulty1.yaml
+++ b/package/configs/test1_difficulty1.yaml
@@ -256,7 +256,7 @@ attendant:
 
 env_specs:
   task: GOTO
-  principal_level: DIST
-  attendant_level: DIST
+  principal_level: EMPTY
+  attendant_level: DEATH
   seed: 168
   attendant_variants: [OBJECTS]
