--- a/package/configs/intention_speaker_difficulty1.yaml
+++ b/package/configs/intention_speaker_difficulty1.yaml
@@ -256,7 +256,8 @@ attendant:
 
 env_specs:
   task: PICKUP
-  principal_level: MULT_ROOMS
-  attendant_level: MULT_ROOMS
-  seed: 168
-  principal_render_mode: human
+  principal_level: ROOM_DOOR_KEY
+  attendant_edits:
+    - { name: "change_room_size", new_size: 12 }
+  seed: 16
+  attendant_render_mode: human
