--- a/package/configs/intention_speaker_difficulty1.yaml
+++ b/package/configs/intention_speaker_difficulty1.yaml
@@ -256,9 +256,9 @@ attendant:
 
 env_specs:
   task: PICKUP
-  principal_level: ROOM_DOOR_KEY
+  principal_level: TREASURE_ISLAND
   attendant_edits:
-    - { name: "change_room_size", new_size: 12 }
+    - { name: "change_target_color" }
   seed: 16
-  principal_render_mode: human
-  attendant_render_mode: human
+  # principal_render_mode: human
+  # attendant_render_mode: human
