--- a/package/configs/intention_speaker_difficulty2.yaml
+++ b/package/configs/intention_speaker_difficulty2.yaml
@@ -14,13 +14,12 @@ attendant:
     - { name: "reward_carry_object_hof" }
   basic_reward_weights:
     - 1
-  # skills: ['drop', 'right', 'toggle', 'move_left_1_steps', 'left', 'pickup', 'forward']
-  skills: ['move_left_1_steps', 'move_backward_2_steps', 'put_down_grey_key', 'pickup_red_box', 'open_grey_door']
+  skills: ['go_to_brown_bridge', 'go_to_brown_box', 'pickup_green_ball', 'move_right_3_steps', 'move_forward_2_steps']
 
 env_specs:
   task: PICKUP
-  principal_level: ROOM_DOOR_KEY
-  seed: 16
+  principal_level: TREASURE_ISLAND
+  seed: 8
   # principal_render_mode: human
   # attendant_render_mode: human
   principal_setup_actions: [0, 1]
