--- a/package/configs/base.yaml
+++ b/package/configs/base.yaml
@@ -19,8 +19,8 @@ human:
   world_model:
     task: PICKUP
     layout: ROOM_DOOR_KEY
-    edits: [FLIP_VERTICAL, DOUBLE_GRID_SIZE, CHANGE_TARGET_COLOR, HIDE_TARGETS_IN_BOXES, CHANGE_AGENT_VIEW_SIZE, PUT_AGENT_IN_ROOM, ADD_OPENING_TO_WALL, ADD_DOOR, TOGGLE_DOORS, BLOCK_DOORS]
-    seed: 1
+    edits: [DOUBLE_GRID_SIZE, ADD_OPENING, ADD_PASSAGE, HIDE_TARGETS_IN_BOXES, CHANGE_TARGET_COLOR, TOGGLE_OPENING, BLOCK_OPENING, PUT_AGENT_INSIDE_SECTION, HIDE_TOOL_IN_BOX, REMOVE_TOOL] #[FLIP_VERTICAL, DOUBLE_GRID_SIZE, CHANGE_TARGET_COLOR, HIDE_TARGETS_IN_BOXES, CHANGE_AGENT_VIEW_SIZE, PUT_AGENT_IN_ROOM, ADD_OPENING_TO_WALL, ADD_DOOR, TOGGLE_DOOR, BLOCK_DOOR]
+    seed: 121
     allowed_object_colors: ["green", "blue"]
 ai:
   model_source: gpt
@@ -38,6 +38,6 @@ ai:
   world_model:
     task: PICKUP
     layout: TREASURE_ISLAND
-    edits: [FLIP_VERTICAL, DOUBLE_GRID_SIZE, CHANGE_TARGET_COLOR, HIDE_TARGETS_IN_BOXES, CHANGE_AGENT_VIEW_SIZE, PUT_AGENT_ON_ISLAND, ADD_BRIDGE, MAKE_LAVA_SAFE, ADD_FIREPROOF_SHOES, BLOCK_BRIDGES]
+    edits: [DOUBLE_GRID_SIZE, ADD_OPENING, ADD_PASSAGE, HIDE_TARGETS_IN_BOXES, CHANGE_TARGET_COLOR, TOGGLE_OPENING, BLOCK_OPENING, PUT_AGENT_INSIDE_SECTION, HIDE_TOOL_IN_BOX, REMOVE_TOOL, MAKE_LAVA_SAFE, ADD_FIREPROOF_SHOES]  #[FLIP_VERTICAL, DOUBLE_GRID_SIZE, CHANGE_TARGET_COLOR, HIDE_TARGETS_IN_BOXES, CHANGE_AGENT_VIEW_SIZE, PUT_AGENT_ON_ISLAND, ADD_BRIDGE, ADD_FIREPROOF_SHOES, BLOCK_BRIDGE, MAKE_LAVA_SAFE, ADD_TOOL, BREAK_BRIDGE]
     seed: 23
     allowed_object_colors: ["green", "blue"]
