--- a/mindgrid/configs/base.yaml
+++ b/mindgrid/configs/base.yaml
@@ -19,7 +19,7 @@ human:
   world_model:
     task: PICKUP
     layout: ROOM_DOOR_KEY
-    edits: [DOUBLE_GRID_SIZE, HIDE_TARGETS_IN_BOXES, CHANGE_TARGET_COLOR, BLOCK_OPENING, BLOCK_OPENING, TOGGLE_OPENING, TOGGLE_OPENING, REMOVE_TOOL, FLIP_VERTICAL] #[FLIP_VERTICAL, DOUBLE_GRID_SIZE, CHANGE_TARGET_COLOR, HIDE_TARGETS_IN_BOXES, CHANGE_AGENT_VIEW_SIZE, PUT_AGENT_IN_ROOM, ADD_OPENING_TO_WALL, ADD_DOOR, TOGGLE_DOOR, BLOCK_DOOR]
+    edits: [DOUBLE_GRID_SIZE, HIDE_TARGETS_IN_BOXES, CHANGE_TARGET_COLOR, TOGGLE_OPENING, TOGGLE_OPENING, FLIP_VERTICAL, BLOCK_OPENING]     
     seed: 35
     allowed_object_colors: ["green", "blue"]
 ai:
@@ -38,6 +38,6 @@ ai:
   world_model:
     task: PICKUP
     layout: TREASURE_ISLAND
-    edits: [DOUBLE_GRID_SIZE, FLIP_VERTICAL, HIDE_TARGETS_IN_BOXES, CHANGE_TARGET_COLOR, TOGGLE_OPENING, HIDE_TOOL_IN_BOX, BLOCK_OPENING, REMOVE_TOOL, MAKE_LAVA_SAFE]  #[FLIP_VERTICAL, DOUBLE_GRID_SIZE, CHANGE_TARGET_COLOR, HIDE_TARGETS_IN_BOXES, CHANGE_AGENT_VIEW_SIZE, PUT_AGENT_ON_ISLAND, ADD_BRIDGE, ADD_FIREPROOF_SHOES, BLOCK_BRIDGE, MAKE_LAVA_SAFE, ADD_TOOL, BREAK_BRIDGE]
+    edits: [DOUBLE_GRID_SIZE, FLIP_VERTICAL, HIDE_TARGETS_IN_BOXES, CHANGE_TARGET_COLOR, TOGGLE_OPENING, HIDE_TOOL_IN_BOX, ADD_FIREPROOF_SHOES, BLOCK_OPENING, ADD_PASSAGE]  
     seed: 52
     allowed_object_colors: ["green", "blue"]
