solver kind of works

--- a/mindgrid/configs/base.yaml
+++ b/mindgrid/configs/base.yaml
@@ -38,6 +38,6 @@ ai:
   world_model:
     task: PICKUP
     layout: TREASURE_ISLAND
-    edits: [DOUBLE_GRID_SIZE, FLIP_VERTICAL, HIDE_TARGETS_IN_BOXES, CHANGE_TARGET_COLOR, TOGGLE_OPENING, HIDE_TOOL_IN_BOX, ADD_FIREPROOF_SHOES, BLOCK_OPENING, ADD_PASSAGE]  
-    seed: 52
+    edits: [DOUBLE_GRID_SIZE, FLIP_VERTICAL, CHANGE_TARGET_COLOR, TOGGLE_OPENING, REMOVE_TOOL]  
+    seed: 1233
     allowed_object_colors: ["green", "blue"]
